# streamly-ghc9-regression

./: Array.hs  Fold.hs  Handle.hs  MArray.hs  Main.hs  Operations.hs  README.md  Rules.hs  Step.hs  StreamD.hs  StreamK.hs  Unfold.hs  after.ghc-8.dump-simpl  after.ghc-8.fusion-plugin.dump-simpl  after.ghc-9.dump-simpl  after.ghc-9.fusion-plugin.dump-simpl  cabal.project  minimum.ghc-8.10.dump-simpl  minimum.ghc-8.8.dump-simpl  mkInput.sh  postscan.dump-simpl.ghc-8.10  postscan.dump-simpl.ghc-9.3  splitOnSeq.ghc-8.dump-simpl  splitOnSeq.ghc-9.dump-simpl  streamly-ghc9-regression.cabal
