cabal-version:       >=1.10
name:                streamly-ghc9-regression
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable unfoldrM
  main-is:             Main.hs
  build-depends:       base -any, ghc-prim
  default-language:    Haskell2010
  other-modules: StreamK, Operations, StreamD, Step, Serial
  default-extensions:
        BangPatterns
        CApiFFI
        CPP
        ConstraintKinds
        DeriveDataTypeable
        DeriveGeneric
        DeriveTraversable
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeFamilies
        ViewPatterns

        -- MonoLocalBinds, enabled by TypeFamilies, causes performance
        -- regressions. Disable it. This must come after TypeFamilies,
        -- otherwise TypeFamilies will enable it again.
        NoMonoLocalBinds

        -- UndecidableInstances -- Does not show any perf impact
        -- UnboxedTuples        -- interferes with (#.)

