cabal-version:       >=1.10
name:                streamly-ghc9-regression
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

flag fusion-plugin
  description: Use fusion plugin for benchmarks and executables
  manual: True
  default: False

executable main
  main-is:             Main.hs
  build-depends:       base -any
              , ghc-prim
              , fusion-plugin-types
              , fusion-plugin
  default-language:    Haskell2010
  ghc-options: -O2
               -fdicts-strict
               -fspec-constr-recursive=16
               -fmax-worker-args=16
               -ddump-simpl
               -ddump-to-file
               -- -dsuppress-all
               -- -fforce-recomp
  if flag(fusion-plugin)
      ghc-options: -fplugin Fusion.Plugin

  other-modules: StreamK, Operations, StreamD, Step, Serial, Fold, Handle,
              MArray, Unfold, Ring, Array
  default-extensions:
        BangPatterns
        CApiFFI
        CPP
        ConstraintKinds
        DeriveDataTypeable
        DeriveGeneric
        DeriveTraversable
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeFamilies
        ViewPatterns

        -- MonoLocalBinds, enabled by TypeFamilies, causes performance
        -- regressions. Disable it. This must come after TypeFamilies,
        -- otherwise TypeFamilies will enable it again.
        NoMonoLocalBinds

        -- UndecidableInstances -- Does not show any perf impact
        -- UnboxedTuples        -- interferes with (#.)
